samples/_failures_safe/1761072457_411c19_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_115598c7.c: In function ‘main’:
./samples/SAFE/__tmp_115598c7.c:172:5: error: expected declaration or statement at end of input
  172 |     if (len == 0) {
      |     ^~
./samples/SAFE/__tmp_115598c7.c:172:5: error: expected declaration or statement at end of input
